[gd_scene load_steps=4 format=3 uid="uid://dts22loe15w4w"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_nmyij"]
[ext_resource type="Texture2D" uid="uid://0ueqar2wegc" path="res://Textures/SpaceInvaders_Background.png" id="2_fkgvv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fwpv"]
bg_color = Color(0.103744, 0.103744, 0.103743, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_nmyij")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_right = 776.0
offset_bottom = 1015.0

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer"]
layout_mode = 2
texture = ExtResource("2_fkgvv")
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 696.0
offset_bottom = 911.0

[node name="Control" type="Control" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 175)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Colors From Outer Space!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 175)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="New Game" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "New Game"

[node name="How to Play" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "How to Play"

[node name="Credits" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="Quit" type="Button" parent="Control/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="CheckButton" type="CheckButton" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Color Blind Mode"

[node name="how to play" type="PanelContainer" parent="Control"]
visible = false
layout_mode = 0
offset_right = 600.0
offset_bottom = 904.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4fwpv")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/how to play"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/how to play/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "How to Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control/how to play/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="how_to_play_button_back" type="Button" parent="Control/how to play/VBoxContainer"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.992157, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="credits" type="PanelContainer" parent="Control"]
visible = false
layout_mode = 0
offset_right = 592.0
offset_bottom = 920.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4fwpv")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/credits"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/credits/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control/credits/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Made for Mini Jam 160:
 Light
Limitation:
Speed is key
Designer/Programmer
Brian Hall
https://pr0t34n.itch.io/
Assets:

"
horizontal_alignment = 1

[node name="credits_back" type="Button" parent="Control/credits/VBoxContainer"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0.972549, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="background_music" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="button_up" from="Control/VBoxContainer/VBoxContainer/New Game" to="." method="_on_new_game_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/VBoxContainer/How to Play" to="." method="_on_how_to_play_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_button_up"]
[connection signal="toggled" from="Control/VBoxContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="button_up" from="Control/how to play/VBoxContainer/how_to_play_button_back" to="." method="_on_how_to_play_button_back_button_up"]
[connection signal="button_up" from="Control/credits/VBoxContainer/credits_back" to="." method="_on_credits_back_button_up"]
